# AlphaKyoen

./: .dockerignore  Dockerfile  README.md  app.py  patterns.npy  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  sync-to-hf.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.ts  main.tsx  styles.css  types.ts
models/: model_epoch_10.msgpack  model_epoch_10.pth  model_epoch_100.msgpack  model_epoch_20.msgpack  model_epoch_20.pth  model_epoch_30.msgpack  model_epoch_30.pth  model_epoch_40.msgpack  model_epoch_40.pth  model_epoch_50.msgpack  model_epoch_60.msgpack  model_epoch_70.msgpack  model_epoch_80.msgpack  model_epoch_90.msgpack  model_interrupted.msgpack  model_interrupted.pth
scripts/: smoke_api.py
src/: game.py  main.py  mcts.py  model.py  precompute.py
