[project]
name = "alphakyoen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "flax>=0.12.2",
    "jax[cuda12]>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "optax>=0.2.7",
    "pydantic>=2.11.9",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.35.0",
]
